Added name textfield Added Readme File

--- a/Contact_Us/Contact US.html
+++ b/Contact_Us/Contact US.html
@@ -16,8 +16,11 @@
        We would be happy to hear from you!<br>
     </h4>
     </div>
-	<form action="/" method="post" target="_blank"> 
-		
+	<form action="/" method="post" target="#"> 
+        
+        <label for="name">Enter your name </label>
+        <input type="text" name="name" required><br><br>
+
         <label for="email">Enter your email </label>
         <input type="email" name="email" required><br><br>
 
